feat: Enhance font size control for leaf nodes and implement dynamic sizing based on node depth

--- a/examples/browser-example.html
+++ b/examples/browser-example.html
@@ -80,7 +80,7 @@ body {
     <input type="range" id="minNodeHeight" min="30" max="200" value="60" />
   </div>
   <div class="control">
-    <label>Font Size <span id="fontSizeVal">14</span></label>
+    <label>Leaf Node Font Size <span id="fontSizeVal">14</span></label>
     <input type="range" id="fontSize" min="8" max="36" value="14" />
   </div>
   <div class="control">
