--- a/examples/browser-example.html
+++ b/examples/browser-example.html
@@ -46,6 +46,7 @@
         <div class="mb-4">          <label class="flex justify-between text-sm font-medium text-gray-700 mb-1">Layout Type</label>          <select id="layoutType" class="w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary text-sm">
             <option value="grid">Standard Grid</option>
             <option value="aspectRatio">Aspect Ratio Optimized</option>
+            <option value="flowgrid">Flow Grid Aspect</option>
             <option value="permutation">Permutation Optimized</option>
             <option value="treemap">Treemap</option>
           </select>
@@ -284,8 +285,7 @@ async function renderDiagram() {
     layoutType: layoutType,
     minNodeWidth: parseInt(document.getElementById('minNodeWidth').value, 10),
     minNodeHeight: parseInt(document.getElementById('minNodeHeight').value, 10)
-  };
-    if (layoutType === 'grid') {
+  };    if (layoutType === 'grid') {
     const columnsValue = parseInt(document.getElementById('columns').value, 10);
     layoutOptions.columns = columnsValue;
     console.log(`Using Grid Layout with ${columnsValue} columns`, layoutOptions);
@@ -295,6 +295,11 @@ async function renderDiagram() {
     const aspectRatioValue = parseFloat(document.getElementById('aspectRatio').value);
     layoutOptions.targetAspectRatio = aspectRatioValue;
     console.log(`Using Aspect Ratio Layout with target ratio ${aspectRatioValue}`, layoutOptions);
+    layoutOptions.targetLeafAspectRatio = undefined;
+  } else if (layoutType === 'flowgrid') {
+    const aspectRatioValue = parseFloat(document.getElementById('aspectRatio').value);
+    layoutOptions.targetAspectRatio = aspectRatioValue;
+    console.log(`Using Flow Grid Aspect Layout with target ratio ${aspectRatioValue}`, layoutOptions);
     layoutOptions.targetLeafAspectRatio = undefined;
   } else if (layoutType === 'treemap') {
     const targetLeafAspectRatioValue = parseFloat(document.getElementById('targetLeafAspectRatio').value);
@@ -562,7 +567,7 @@ inputs.forEach(input => {
 document.getElementById('layoutType').addEventListener('change', () => {
   const layoutType = document.getElementById('layoutType').value;
   document.getElementById('columnsControl').style.display = layoutType === 'grid' ? 'block' : 'none';
-  document.getElementById('aspectRatioControl').style.display = ['aspectRatio', 'permutation'].includes(layoutType) ? 'block' : 'none';
+  document.getElementById('aspectRatioControl').style.display = ['aspectRatio', 'flowgrid', 'permutation'].includes(layoutType) ? 'block' : 'none';
   document.getElementById('maxPermutationChildrenControl').style.display = layoutType === 'permutation' ? 'block' : 'none';
   document.getElementById('targetLeafAspectRatioControl').style.display = layoutType === 'treemap' ? 'block' : 'none';
   renderDiagram();
