--- a/examples/browser-example.html
+++ b/examples/browser-example.html
@@ -47,13 +47,11 @@
         </div>
         <div class="space-y-4">
           <div class="mb-4">
-            <label class="flex justify-between text-sm font-medium text-gray-700 mb-1">Layout Type</label>
-            <select id="layoutType" class="w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary text-sm">
+            <label class="flex justify-between text-sm font-medium text-gray-700 mb-1">Layout Type</label>            <select id="layoutType" class="w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary text-sm">
               <option value="grid">Standard Grid</option>
               <option value="aspectRatio">Aspect Ratio Optimized</option>
               <option value="flowgrid">Flow Grid Aspect</option>
               <option value="permutation">Permutation Optimized</option>
-              <option value="treemap">Treemap</option>
             </select>
           </div>
           <div id="columnsControl" class="mb-3">
@@ -67,12 +65,6 @@
               Target Aspect Ratio <span id="aspectRatioVal" class="control-value">1.78</span>
             </label>
             <input type="range" id="aspectRatio" min="0.5" max="3" step="0.1" value="1.78" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer" />
-          </div>
-          <div id="targetLeafAspectRatioControl" class="mb-3" style="display: none;">
-            <label class="flex justify-between text-sm font-medium text-gray-700 mb-1">
-              Leaf Node Aspect Ratio <span id="targetLeafAspectRatioVal" class="control-value">1.0</span>
-            </label>
-            <input type="range" id="targetLeafAspectRatio" min="0.5" max="3" step="0.1" value="1.0" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer" />
           </div>
           <div id="maxPermutationChildrenControl" class="mb-3" style="display: none;">
             <label class="flex justify-between text-sm font-medium text-gray-700 mb-1">
@@ -290,8 +282,7 @@ async function renderDiagram() {
   container.appendChild(loadingIndicator);
 
   const fixedLeafWidthEnabled = document.getElementById('fixedLeafWidthToggle').checked;
-  const leafNodeWidthValue = parseInt(document.getElementById('leafNodeWidth').value, 10);
-  const layoutType = document.getElementById('layoutType').value;
+  const leafNodeWidthValue = parseInt(document.getElementById('leafNodeWidth').value, 10);  const layoutType = document.getElementById('layoutType').value;
 
   const layoutOptions = {
     padding: parseInt(document.getElementById('padding').value, 10),
@@ -304,22 +295,14 @@ async function renderDiagram() {
     layoutOptions.columns = columnsValue;
     console.log(`Using Grid Layout with ${columnsValue} columns`, layoutOptions);
     layoutOptions.targetAspectRatio = undefined;
-    layoutOptions.targetLeafAspectRatio = undefined;
   } else if (layoutType === 'aspectRatio') {
     const aspectRatioValue = parseFloat(document.getElementById('aspectRatio').value);
     layoutOptions.targetAspectRatio = aspectRatioValue;
     console.log(`Using Aspect Ratio Layout with target ratio ${aspectRatioValue}`, layoutOptions);
-    layoutOptions.targetLeafAspectRatio = undefined;
   } else if (layoutType === 'flowgrid') {
     const aspectRatioValue = parseFloat(document.getElementById('aspectRatio').value);
     layoutOptions.targetAspectRatio = aspectRatioValue;
     console.log(`Using Flow Grid Aspect Layout with target ratio ${aspectRatioValue}`, layoutOptions);
-    layoutOptions.targetLeafAspectRatio = undefined;
-  } else if (layoutType === 'treemap') {
-    const targetLeafAspectRatioValue = parseFloat(document.getElementById('targetLeafAspectRatio').value);
-    layoutOptions.targetLeafAspectRatio = targetLeafAspectRatioValue;
-    console.log(`Using Treemap Layout with leaf aspect ratio ${targetLeafAspectRatioValue}`, layoutOptions);
-    layoutOptions.targetAspectRatio = undefined;
   }
 
   const options = {
