feat: Add PackingLayoutEngine for optimized node packing and layout calculations feat: Update index.ts to include PackingLayoutEngine and support for packing layout type feat: Enhance browser-example.html with new packing layout option in the UI

--- a/examples/browser-example.html
+++ b/examples/browser-example.html
@@ -52,6 +52,7 @@
               <option value="aspectRatio">Aspect Ratio Optimized</option>
               <option value="flowgrid">Flow Grid Aspect</option>
               <option value="permutation">Permutation Optimized</option>
+              <option value="packing">Packing Layout</option>
             </select>
           </div>
           <div id="columnsControl" class="mb-3">
